# sqlalchemy-opteryx

./: LICENSE  Makefile  README.md  plain_script.py  pyproject.toml
.github/: release.yaml
.github/workflows/: regression-tests.yaml  release.yaml
sqlalchemy_dialect/: __init__.py  dbapi.py  dialect.py
tests/: __init__.py  example.py  plain_script.py  test_dialect.py  test_driver.py
