[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opteryx-sqlalchemy"
version = "0.0.0"
description = "Opteryx SQLAlchemy Dialect"
requires-python = ">=3.11"
dependencies = [
    "brotli-asgi",
    "python-jose[cryptography]==3.3.0",
    "cryptography>=40.0.0",
    "requests>=2.30.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
]

[project.entry-points."sqlalchemy.dialects"]
opteryx = "sqlalchemy_dialect.dialect:OptetyxDialect"

[tool.isort]
profile = "black"
extend_skip_glob = ["tests/**"]
skip_gitignore = true
line_length = 100
multi_line_output = 9
force_single_line = true
float_to_top = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 100
indent-width = 4
target-version = 'py313'

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100